--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/pranavraju1/blogging#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cli-color": "^2.0.3",
+    "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.1.3",
     "nodemon": "^3.0.3"
   }
