--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.1.3",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.3"
   }
 }
